<resources>
    <string name="app_name">Auth UI designs</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="music_stream">MUSIC STREAM</string>
    <string name="or">or</string>
    <string name="facebook">facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_nback">Welcome \nBack</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_into_your_account_to_access_nthousand_of_products">Sign in into your account to access \nthousand of products</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="connect_with">Connect with</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="apple">apple</string>
    <string name="username">Username</string>
    <string name="create_your_own_account_to_access_nthousands_of_products">create your own account to access \nthousands of products</string>
    <string name="have_trouble_with_login">Have trouble with login ?</string>
    <string name="remember_me_next_time">Remember me next time</string>
    <string name="or_login_with">or Login with</string>
    <string name="back">back</string>
    <string name="welcome_back1">Welcome Back !</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="signup_and_nstart_learning">Signup and \nstart learning</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_up_and_get_started">Sign up and get started</string>
    <string name="create_your_account">Create your account</string>
    <string name="retype_password">Retype Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hello">Hello !</string>
    <string name="please_fill_in_to_sign_up_new_account">Please fill in to sign up new account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="have_trouble_with_signup">Have trouble with Signup ?</string>
    <string name="eye">eye</string>

</resources>